shared worker: Move DevTools WorkerCreated call to SharedWorkerHost.

This makes more sense as SharedWorkerHost's destructor calls
WorkerDestroyed to balance it out. It also simplifies the params
to Start().

Not strictly needed for the linked bug. Refactoring that will
make it easier to fix.

Bug: 830288
Change-Id: I3be38ad7cc58c35bef301cd21074987ea9e5c64d
Reviewed-on: https://chromium-review.googlesource.com/1004887
Commit-Queue: Matt Falkenhagen <falken@chromium.org>
Reviewed-by: Hiroki Nakagawa <nhiroki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550213}
Former-commit-id: e860f24ff11550576fa362b72252f5f6adb33221